--- a/Projekt/Projekt 0/Demo 2/Demo2.ipynb
+++ b/Projekt/Projekt 0/Demo 2/Demo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdrive\u001b[49m.mount(\u001b[33m'\u001b[39m\u001b[33m/content/drive\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdrive\u001b[49m.mount(\u001b[33m'\u001b[39m\u001b[33m/content/drive\u001b[39m\u001b[33m'\u001b[39m)\n",
       "\u001b[31mNameError\u001b[39m: name 'drive' is not defined"
      ]
     }
@@ -109,319 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "74-Z3hgEl9rA"
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\fabia\\miniconda3\\envs\\geo\\Lib\\site-packages\\keplergl\\keplergl.py:13: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_string\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Set local Windows data folder (no leading spaces)\u001b[39;00m\n\u001b[32m      7\u001b[39m path = \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mC:\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mUsers\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mfabia\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mAH1023\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mProjekt\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mProjekt_0\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mDemo 2\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m path = \u001b[43mos\u001b[49m.path.normpath(path)  \u001b[38;5;66;03m# normalize path separators\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# If running in Colab, mount if available (safe guard)\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files in data folder:\n",
-      "   deso_a2_ume.cpg\n",
-      "   deso_a2_ume.dbf\n",
-      "   deso_a2_ume.prj\n",
-      "   deso_a2_ume.qpj\n",
-      "   deso_a2_ume.shp\n",
-      "   deso_a2_ume.shx\n",
-      "   deso_b1_ume.cpg\n",
-      "   deso_b1_ume.dbf\n",
-      "   deso_b1_ume.prj\n",
-      "   deso_b1_ume.qpj\n",
-      "   deso_b1_ume.shp\n",
-      "   deso_b1_ume.shx\n",
-      "   kepler_config.pkl\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<h2>Befolkning</h2>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ogc_fid</th>\n",
-       "      <th>deso</th>\n",
-       "      <th>alder0_6</th>\n",
-       "      <th>alder7_15</th>\n",
-       "      <th>alder16_19</th>\n",
-       "      <th>alder20_24</th>\n",
-       "      <th>alder25_44</th>\n",
-       "      <th>alder45_64</th>\n",
-       "      <th>alder65_w</th>\n",
-       "      <th>totalt</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5022</td>\n",
-       "      <td>2480A0080</td>\n",
-       "      <td>259</td>\n",
-       "      <td>263</td>\n",
-       "      <td>98</td>\n",
-       "      <td>90</td>\n",
-       "      <td>624</td>\n",
-       "      <td>592</td>\n",
-       "      <td>429</td>\n",
-       "      <td>2355</td>\n",
-       "      <td>POLYGON ((20.32892 64.03356, 20.31428 64.03195...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5023</td>\n",
-       "      <td>2480A0090</td>\n",
-       "      <td>127</td>\n",
-       "      <td>164</td>\n",
-       "      <td>52</td>\n",
-       "      <td>39</td>\n",
-       "      <td>356</td>\n",
-       "      <td>320</td>\n",
-       "      <td>284</td>\n",
-       "      <td>1342</td>\n",
-       "      <td>POLYGON ((20.64183 64.00944, 20.62268 64.00109...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5030</td>\n",
-       "      <td>2480C1350</td>\n",
-       "      <td>128</td>\n",
-       "      <td>179</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>339</td>\n",
-       "      <td>404</td>\n",
-       "      <td>344</td>\n",
-       "      <td>1534</td>\n",
-       "      <td>POLYGON ((20.31906 63.83298, 20.31904 63.83293...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5031</td>\n",
-       "      <td>2480C1390</td>\n",
-       "      <td>52</td>\n",
-       "      <td>22</td>\n",
-       "      <td>19</td>\n",
-       "      <td>134</td>\n",
-       "      <td>394</td>\n",
-       "      <td>218</td>\n",
-       "      <td>153</td>\n",
-       "      <td>992</td>\n",
-       "      <td>POLYGON ((20.28038 63.83529, 20.28018 63.83511...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5032</td>\n",
-       "      <td>2480C1250</td>\n",
-       "      <td>58</td>\n",
-       "      <td>47</td>\n",
-       "      <td>43</td>\n",
-       "      <td>172</td>\n",
-       "      <td>511</td>\n",
-       "      <td>321</td>\n",
-       "      <td>292</td>\n",
-       "      <td>1444</td>\n",
-       "      <td>POLYGON ((20.25727 63.8278, 20.25704 63.82752,...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ogc_fid       deso  alder0_6  alder7_15  alder16_19  alder20_24  \\\n",
-       "0     5022  2480A0080       259        263          98          90   \n",
-       "1     5023  2480A0090       127        164          52          39   \n",
-       "2     5030  2480C1350       128        179          80          60   \n",
-       "3     5031  2480C1390        52         22          19         134   \n",
-       "4     5032  2480C1250        58         47          43         172   \n",
-       "\n",
-       "   alder25_44  alder45_64  alder65_w  totalt  \\\n",
-       "0         624         592        429    2355   \n",
-       "1         356         320        284    1342   \n",
-       "2         339         404        344    1534   \n",
-       "3         394         218        153     992   \n",
-       "4         511         321        292    1444   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((20.32892 64.03356, 20.31428 64.03195...  \n",
-       "1  POLYGON ((20.64183 64.00944, 20.62268 64.00109...  \n",
-       "2  POLYGON ((20.31906 63.83298, 20.31904 63.83293...  \n",
-       "3  POLYGON ((20.28038 63.83529, 20.28018 63.83511...  \n",
-       "4  POLYGON ((20.25727 63.8278, 20.25704 63.82752,...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<br><br><br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<h2>Arbetande befolkning</h2>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ogc_fid</th>\n",
-       "      <th>deso</th>\n",
-       "      <th>offentliga</th>\n",
-       "      <th>naringsliv</th>\n",
-       "      <th>totalt</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5022</td>\n",
-       "      <td>2480A0080</td>\n",
-       "      <td>389</td>\n",
-       "      <td>859</td>\n",
-       "      <td>1248</td>\n",
-       "      <td>POLYGON ((20.32892 64.03356, 20.31428 64.03195...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5023</td>\n",
-       "      <td>2480A0090</td>\n",
-       "      <td>221</td>\n",
-       "      <td>495</td>\n",
-       "      <td>716</td>\n",
-       "      <td>POLYGON ((20.64183 64.00944, 20.62268 64.00109...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5030</td>\n",
-       "      <td>2480C1350</td>\n",
-       "      <td>407</td>\n",
-       "      <td>308</td>\n",
-       "      <td>715</td>\n",
-       "      <td>POLYGON ((20.31906 63.83298, 20.31904 63.83293...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5031</td>\n",
-       "      <td>2480C1390</td>\n",
-       "      <td>231</td>\n",
-       "      <td>388</td>\n",
-       "      <td>619</td>\n",
-       "      <td>POLYGON ((20.28038 63.83529, 20.28018 63.83511...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5032</td>\n",
-       "      <td>2480C1250</td>\n",
-       "      <td>308</td>\n",
-       "      <td>577</td>\n",
-       "      <td>885</td>\n",
-       "      <td>POLYGON ((20.25727 63.8278, 20.25704 63.82752,...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ogc_fid       deso  offentliga  naringsliv  totalt  \\\n",
-       "0     5022  2480A0080         389         859    1248   \n",
-       "1     5023  2480A0090         221         495     716   \n",
-       "2     5030  2480C1350         407         308     715   \n",
-       "3     5031  2480C1390         231         388     619   \n",
-       "4     5032  2480C1250         308         577     885   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((20.32892 64.03356, 20.31428 64.03195...  \n",
-       "1  POLYGON ((20.64183 64.00944, 20.62268 64.00109...  \n",
-       "2  POLYGON ((20.31906 63.83298, 20.31904 63.83293...  \n",
-       "3  POLYGON ((20.28038 63.83529, 20.28018 63.83511...  \n",
-       "4  POLYGON ((20.25727 63.8278, 20.25704 63.82752,...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<br><br><br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1200,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1219,6 +921,17 @@
      "output_type": "stream",
      "text": [
       "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'B1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m config = pickle.load(\u001b[38;5;28mopen\u001b[39m(config_path, \u001b[33m'\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      8\u001b[39m \u001b[38;5;28mmap\u001b[39m = KeplerGl(height=\u001b[32m920\u001b[39m, config=config)    \u001b[38;5;66;03m#Skapa en kepler karta.\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28mmap\u001b[39m.add_data(data=\u001b[43mB1\u001b[49m.copy(), name=\u001b[33m'\u001b[39m\u001b[33mZones\u001b[39m\u001b[33m'\u001b[39m)   \u001b[38;5;66;03m#Lägg till en tabell som kartan kan använda.\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mmap\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# ...existing code...\u001b[39;00m\n\u001b[32m     12\u001b[39m \n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# ...existing code...\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# save kepler config using os.path.join\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'B1' is not defined"
      ]
     }
    ],
